@@ -1,3 +1,10 @@
+2006-12-08  Mike Stump  <mrs@apple.com>
+
+	* configure.ac: Fix x86 darwin builds.
+	* darwin_stop_world.c: Likewise.
+	* include/private/gcconfig.h: Likewise.
+	* connfigure: Regenerate.
+	
 2006-09-26  Jack Howarth  <howarth@bromo.med.uc.edu>
 
 	PR target/29180
